--- a/package.json
+++ b/package.json
@@ -19,17 +19,26 @@
     "@mui/material": "5.8.2",
     "@mui/styles": "5.8.0",
     "apexcharts": "3.35.3",
+    "axios": "^1.4.0",
     "clsx": "1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
+    "js-cookie": "^3.0.5",
     "next": "12.1.6",
     "next-images": "1.8.4",
+    "next-redux-wrapper": "^8.1.0",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
     "react-custom-scrollbars-2": "4.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^8.1.0",
+    "redux": "^4.2.1",
+    "redux-cookies-middleware": "^0.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.22",
+    "redux-saga": "^1.2.3"
   },
   "scripts": {
     "dev": "next",
