--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "private": false,
   "dependencies": {
     "@emotion/cache": "11.7.1",
-    "@emotion/react": "11.9.0",
+    "@emotion/react": "^11.9.0",
     "@emotion/server": "11.4.0",
-    "@emotion/styled": "11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@mui/core": "5.0.0-alpha.54",
     "@mui/icons-material": "5.8.2",
     "@mui/lab": "5.0.0-alpha.84",
-    "@mui/material": "5.8.2",
+    "@mui/material": "^5.8.2",
     "@mui/styles": "5.8.0",
     "apexcharts": "3.35.3",
     "axios": "^1.4.0",
     "clsx": "1.1.1",
     "context-api": "0.0.2",
     "date-fns": "2.28.0",
+    "dayjs": "^1.11.9",
     "js-cookie": "^3.0.5",
     "next": "12.1.6",
     "next-images": "1.8.4",
