--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.0",
     "apexcharts": "^3.37.3",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "boxicons": "^2.1.4",
+    "dayjs": "^1.11.9",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-redux-wrapper": "^8.1.0",
     "next-seo": "^5.15.0",
     "node-sass": "^7.0.3",
     "prism-react-renderer": "^1.3.5",
@@ -23,10 +27,17 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
+    "redux": "^4.2.1",
+    "redux-cookies-middleware": "^0.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.22",
+    "redux-saga": "^1.2.3",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
     "simplebar": "^6.2.4",
