--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^38.1.1",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@vercel/analytics": "^1.0.0",
     "apexcharts": "^3.37.3",
     "axios": "^1.4.0",
@@ -31,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
     "redux": "^4.2.1",
