--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export" :"next export"
+    "export": "next export"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^38.1.1",
+    "@ckeditor/ckeditor5-alignment": "^38.1.1",
     "@ckeditor/ckeditor5-build-classic": "^38.1.1",
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@vercel/analytics": "^1.0.0",
