--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@tinymce/tinymce-react": "^4.3.0",
     "@vercel/analytics": "^1.0.0",
     "apexcharts": "^3.37.3",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
     "boxicons": "^2.1.4",
+    "cookie": "^0.5.0",
     "dayjs": "^1.11.9",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-auth": "^4.23.1",
     "next-redux-wrapper": "^8.1.0",
     "next-seo": "^5.15.0",
     "node-sass": "^7.0.3",
@@ -32,6 +34,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
+    "react-cookie": "^6.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
